# src/api/controllers/agent_controller.py
@@ -26,28 +26,21 @@ class AgentController(object):
 
         return Agent(agent_id)
 
-    def get_connection_client(self, agent: Agent):
-        if agent.id is None:
-            log.warning(f"Agent does not contain key id")
-            raise ApiError(ErrorCode.INVALID_AGENT, "Agent does not contain key id")
-        if agent.id not in self.agents:
+    def get_connector_client(self, agent_id: str):
+        if agent_id not in self.agents:
             log.warning(
-                f"Cannot get connector client with agent id {agent.id}, agent not found")
+                f"Cannot get connector client with agent id {agent_id}, agent not found")
             raise ApiError(ErrorCode.AGENT_NOT_EXIST, "Agent does not exist")
-        return self.agents.get(agent.id)
+        return self.agents.get(agent_id)
 
-    async def disconnect(self, agent: Agent):
-        if agent.id is None:
-            log.warning(f"Agent does not contain key id")
-            raise ApiError(ErrorCode.INVALID_AGENT,
-                           "Agent does not contain key id")
-        if agent.id not in self.agents:
+    async def disconnect(self, agent_id: str):
+        if agent_id not in self.agents:
             log.warning(
-                f"Cannot disconnect agent with id {agent.id}, agent not found")
+                f"Cannot disconnect agent with id {agent_id}, agent not found")
             raise ApiError(ErrorCode.AGENT_NOT_EXIST, "Agent does not exist")
-        connector_client = self.agents.pop(agent.id)
+        connector_client = self.agents.pop(agent_id)
         await connector_client.disconnect()
-        log.info(f"Agent with id {agent.id} has been disconnected")
+        log.info(f"Agent with id {agent_id} has been disconnected")
 
     async def close_all_connections(self):
         log.info("Closing all connector connections")
